# MarvinARM

./: CMakeLists.txt  README.md  package.xml
include/: Arm.h  mimic.h
include/mimic/: arm.h
launch/: mimic.launch  mimic_controller.launch  mimic_gazebo.launch
src/: .mimic.cpp.swp  Arm.cpp  arm.cpp  mimic.cpp
urdf/: left_open_manipulator.gazebo.xacro  left_open_manipulator.urdf.xacro  right_open_manipulator.gazebo.xacro  right_open_manipulator.urdf.xacro
