<?xml version="1.0"?>
<package format="2">
  <name>mimic</name>
  <version>0.0.0</version>
  <description>The mimic package</description>

  <license>Apache 2.0</license>
  <author email="kwon3@cooper.edu">Do Hyung Kwon</author>
  <author email="gebhardt@cooper.edu">Do Hyung Kwon</author>
  <maintainer email="kwon3@cooper.edu">Do Hyung Kwon</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>open_manipulator_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>eigen</depend>
  <depend>tf</depend>
  <depend>open_manipulator_gazebo</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
